Transcript do CSS

--- a/exercicios_webpack/public/index.html
+++ b/exercicios_webpack/public/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Começando tudo</title>
+        <link rel="stylesheet" href="app.css">
     </head>
     <body>
         <script src="bundle.js"></script>
